Fix ace3 link and image background

--- a/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
@@ -36,7 +36,7 @@
     <figure>
         <img src="/wiki/images/MapToolsFinal.png" title="MapToolsFinal.png" width="500" alt="MapToolsFinal.png" />
     </figure>
-    <p>Bearing in degrees is used by default. Mils are only relevant for Artillery Fire Support. More details can be found in the <a href="https://ace3mod.com/wiki/feature/maptools.html">ACE3 Documentation</a>.</p>
+    <p>Bearing in degrees is used by default. Mils are only relevant for Artillery Fire Support. More details can be found in the <a href="https://ace3.acemod.org/wiki/feature/maptools.html">ACE3 Documentation</a>.</p>
     <h3 id="map_markers">Map Markers</h3>
     <p>Map Markers are displayed based on the channel they are broadcast in. You can find the channel you are in at the bottom of your map. Generally we use "Side" channel for markers. There might be situations where Markers will only be put on "Group" or "Command" channel.Cycle through channels with [,], [.], note that these are the default keybindings. To place a marker double-click on the map.</p>
     <table class="table">
@@ -202,9 +202,9 @@
     <figure>
         <img src="/wiki/images/Vector21.png" title="Vector21.png" width="250" alt="Vector21.png" />
     </figure>
-    <p>In addition you can find the horizontal distance to a target and the height difference between your location and the target by first tapping [R] followed by hold [R]. Furthermore, you can also get the distance and direction between two point. Therefor you press and hold [R]. Once the circle appears press [Tab] and keep holding [R]. Once the P-1 info appears aim at your second point and release [R]. More functions can be found in the official <a href="https://ace3mod.com/wiki/feature/vector.html">ACE3 Wiki</a>.</p>
+    <p>In addition you can find the horizontal distance to a target and the height difference between your location and the target by first tapping [R] followed by hold [R]. Furthermore, you can also get the distance and direction between two point. Therefor you press and hold [R]. Once the circle appears press [Tab] and keep holding [R]. Once the P-1 info appears aim at your second point and release [R]. More functions can be found in the official <a href="https://ace3.acemod.org/wiki/feature/vector.html">ACE3 Wiki</a>.</p>
     <figure>
-        <img src="/wiki/images/VectorDistance.png" title="VectorDistance.png" width="500" alt="VectorDistance.png" />
+        <img src="/wiki/images/VectorDistance.png" title="VectorDistance.png" width="500" alt="VectorDistance.png" style="background-color: black" />
     </figure>
     <ul>
         <li><span style="color:#087b08"> <strong>Direct Distance</strong> </span> - Used to zero weapons onto targets.</li>
@@ -466,7 +466,7 @@
         <li><span style="color:#087b08"> <strong>Locking Target</strong></span> - In order to lock onto a target you require the target to have a thermal signature. Furthermore, you need to switch into thermal vision ("Tab" to lock).</li>
         <li><span style="color:#087b08"> <strong>Fire Mode</strong></span> - The Javelin provides two modes: Top and Direct Fire. When using Top Fire the rocket will take a trajectory which leads to it hitting the target directly from above. Direct Fire will make the rocket to climb to travelling height before directly flying at the target ("Ctrl" + "Tab").</li>
     </ul>
-    <p>More detail can be found in the <a href="https://ace3mod.com/wiki/feature/javelin.html">ACE3 Documentation</a>.</p>
+    <p>More detail can be found in the <a href="https://ace3.acemod.org/wiki/feature/javelin.html">ACE3 Documentation</a>.</p>
     <h4 id="rpg_7">RPG-7</h4>
     <figure>
         <img src="/wiki/images/rpg7optic.png" title="rpg7optic.png" width="500" alt="rpg7optic.png" />
