--- a/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
@@ -48,7 +48,7 @@
     <h3 id="calculations_scope_adjustments">Calculations &amp; Scope Adjustments</h3>
     <p>In order to make adjustments you first need to get the required parameters.</p>
     <ul>
-        <li><span style="color:#087b08"><strong>Vector 21</strong></span> - Used to get the direct distance to target (<a href="https://ace3mod.com/wiki/feature/vector.html">more</a>)</li>
+        <li><span style="color:#087b08"><strong>Vector 21</strong></span> - Used to get the direct distance to target (<a href="https://ace3.acemod.org/wiki/feature/vector.html">more</a>)</li>
         <li><span style="color:#087b08"><strong>Kestrel 4500</strong></span> - Weather &amp; Environment Meter.</li>
     </ul>
     <figure>
