--- a/apps/legacy/src/app/views/pages/handbook/page/Rotary_Aviation.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Rotary_Aviation.hbs
@@ -35,7 +35,7 @@
     </ol>
     <h2 id="navigation_task">Navigation &amp; Task</h2>
     <ul>
-        <li><span style="color:#087b08"><strong>General</strong></span> - If navigation is offloaded to the Co-Pilot it is mostly handled by giving bearings and distances to upcoming waypoints, although landmarks to orientation can greatly increase the effectiveness. We use the MicroDAGR as a navigation tool (<a href="https://ace3mod.com/wiki/feature/microdagr.html">Guide for MicroDAGR</a>).
+        <li><span style="color:#087b08"><strong>General</strong></span> - If navigation is offloaded to the Co-Pilot it is mostly handled by giving bearings and distances to upcoming waypoints, although landmarks to orientation can greatly increase the effectiveness. We use the MicroDAGR as a navigation tool (<a href="https://ace3.acemod.org/wiki/feature/microdagr.html">Guide for MicroDAGR</a>).
             <ul>
                 <li>Terrain Concealment - Utilize the terrain to mask your approach and limit your exposure to enemy locations.</li>
                 <li>Exit Route - Always have an exit route to quickly leave the area to a safe zone.</li>
